5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2498.log
== SUBMITION (2019-05-15 10:20:49) 
-- CODE:
A = int(input("Numero de habitantes A: "))
B = int(input("Numero de habitantes B: "))
PercentualA = float(input(("Insira percentual de A: "))
PercentualB = float(input("Insira percentual de B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * PercentualA / 100
	A = A + x
	y = B * PercentualB / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.242539
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 4
    PercentualB = float(input())
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:21:02) 
-- CODE:
A = int(input("Numero de habitantes A: "))
B = int(input("Numero de habitantes B: "))
PercentualA = float(input(("Insira percentual de A: "))
PercentualB = float(input("Insira percentual de B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * PercentualA / 100
	A = A + x
	y = B * PercentualB / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- ERROR:
File "XXXX", line 4
    PercentualB = float(input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:23:00) 
-- CODE:
from math import*
A = int(input("Numero de habitantes A: "))
B = int(input("Numero de habitantes B: "))
PercentualA = float(input(("Insira percentual de A: "))
PercentualB = float(input("Insira percentual de B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * PercentualA / 100
	A = A + x
	y = B * PercentualB / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.20668
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 5
    PercentualB = float(input())
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:24:40) 
-- CODE:
from math import*
A = int(input("Numero de habitantes A: "))
B = int(input("Numero de habitantes B: "))
PercentualA = float(input(("Insira percentual de A: "))
PercentualB = float(input("Insira percentual de B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * PercentualA / 100
	A = A + x
	y = B * PercentualB / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- ERROR:
File "XXXX", line 5
    PercentualB = float(input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:25:36) 
-- CODE:


A = int(input("Numero de habitantes A: "))
B = int(input("Numero de habitantes B: "))
PercentualA = float(input(("Insira percentual de A: "))
PercentualB = float(input("Insira percentual de B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * PercentualA / 100
	A = A + x
	y = B * PercentualB / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.193972
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 6
    PercentualB = float(input())
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:25:51) 
-- CODE:
A = int(input("N de habitantes de A: "))
B = int(input("N de habitantes de B: "))
P_A = float(input("Percentual de crescimento A: "))
P_B = float(input("Percentual de crescimento B: "))

num_A = A
num_B = B

anos = 0

while(A < B):
	x = A * P_A / 100
	A = A + x
	y = B * P_B / 100
	B = B + y
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.194336
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
